Fix tooltip overflow bug

--- a/chat/static/chat/scss/style.scss
+++ b/chat/static/chat/scss/style.scss
@@ -414,3 +414,10 @@ table#options-container {
     margin: auto;
     width: 400px;
 }
+
+
+/* HACK bootstrap tooltip */
+
+.tooltip {
+    position: fixed;
+}
